fixed css z-index problem

--- a/css/custom.css
+++ b/css/custom.css
@@ -145,7 +145,7 @@ p {
 /* Empty Banner CSS */
 .banner2 {
 	position: absolute;
-	z-index: 2;
+	z-index: 101;
 	top: 470px;
 	width: 100%;
 	height: 50px;
@@ -195,7 +195,7 @@ p {
 	margin-top: 500px;
 	background-color: #ffffff;
 	box-shadow: 21px 10px 71px 22px rgba(0,0,0,0.75);
-	z-index: -100;
+	z-index: 100;
 }
 
 .content-pane hr {
